--- a/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_fi.properties
+++ b/trunk/simulations-java/simulations/circuit-construction-kit/data/circuit-construction-kit/localization/circuit-construction-kit-strings_fi.properties
@@ -1,135 +1,135 @@
-#C:\Phet\cck-strings_fi.properties
-#Tue Mar 18 17:22:35 EET 2008
+#circuit-construction-kit-strings_fi.properties created Sat Oct 29 15:41:00 EEST 2011 using: circuit-construction-kit 3.20.00 (53075), translation-utility 2.12.00 (57171) loka 3, 2011
+#Sat Oct 29 15:41:00 EEST 2011
 CCK3ControlPanel.HideElectronsCheckBox=Piilota elektronit
-ComponentEditor.BulbResistanceUnits=Ohmia
-CCK3ControlPanel.ChangeViewButton=Vaihda n\u00E4kym\u00E4 200x
+CCK3ControlPanel.NonContactAmmeterCheckBox=<html>Piirinulkoinen<br>virtamittari</html>
+CCK3ControlPanel.ChangeViewButton=Muuta n\u00E4kym\u00E4 200x
+circuit-construction-kit-dc-virtual-lab.name=Piirirakennussarja (vain DC), virtuaalilaboratorio
 CircuitComponentInteractiveGraphic.RemoveMenuItem=Poista
-ComponentEditor.ResistorResistanceName=Vastus
+ComponentEditor.ResistorResistanceName=Resistanssi
 BranchSource.Resistor=Vastus
 CCK3ControlPanel.MediumRadioButton=Keskikokoinen
-cck-dc.name=Virtapiirin rakennusv\u00E4lineist\u00F6 (vain tasaj\u00E4nnite)
 GrabBag.PencilLead=Lyijykyn\u00E4
 CCK3ControlPanel.Enable=N\u00E4yt\u00E4
-add.voltage=J\u00E4nnitegraaffi
-CCKHelp.ToolboxHelp=Ota johtimet ja komponentit Ty\u00F6kalupakista. 
-ComponentEditor.BulbResistanceTitle=Hehkulamppu
+add.voltage=J\u00E4nnitteen kuvaaja
+ComponentEditor.BulbResistanceTitle=Lamppu
+CCKHelp.ToolboxHelp=Ota johtimet ja komponentit ty\u00F6kalupakista.
 edit.inductance=Muuta induktanssia
 CCK3ControlPanel.JunctionEquations=Liitosyht\u00E4l\u00F6t
-CCK3ControlPanel.DefaultFileName=virtapiiri.cck
-henries=Henri\u00E4
-CircuitComponentInteractiveGraphic.ShowValueMenuItem=N\u00E4yt\u00E4 arvot
+henries=henry\u00E4
+CircuitComponentInteractiveGraphic.ShowValueMenuItem=N\u00E4yt\u00E4 arvo
 GrabBagButton.DialogTitle=V\u00E4linekassi
 edit.capacitance=Muuta kapasitanssia
-CCK3ControlPanel.WireResistivitySliderMeasure=vastus/pituu
-VirtualAmmeter.HelpString2=lukeaksesi virranm\u00E4\u00E4r\u00E4n
-InteractiveSchematicLever.CursorName=rotator2
+CCK3ControlPanel.WireResistivitySliderMeasure=vastus/pituus
+VirtualAmmeter.HelpString2=lukeaksesi virran.
 VirtualAmmeter.HelpString1=Siirr\u00E4 johtimen p\u00E4\u00E4lle
 ComponentEditor.BatteryVoltageName=J\u00E4nnite
 OptionsMenu.Title=Valinnat
-LightBulbGraphic.Bulb1Title=Intensiteetti(0..1) Hehkulamppu 1
-InteractiveLever.CursorName=rotator2
-CircuitComponentInteractiveGraphic.VoltageMenuItem=S\u00E4\u00E4d\u00E4 j\u00E4nnitett\u00E4
-CircuitComponentInteractiveGraphic.FlipMenuItem=Heit\u00E4
-discharge.inductor=Pura k\u00E4\u00E4mi
-ViewMenu.Title=N\u00E4yt\u00E4
-CircuitComponentInteractiveGraphic.RightConnectMenuItem=N\u00E4yt\u00E4 yhteydet oikealla
-VirtualAmmeter.Amps=Ampeeria
-ConstantDensityPropagator.SpeedLimitReached2=% normaali
-BranchSource.LightBulb=Hehkulamppu
-ConstantDensityPropagator.SpeedLimitReached1=Animaation enimm\u00E4isnopeus saavutettu\!Simulaation nopeus pienenee
+CircuitComponentInteractiveGraphic.VoltageMenuItem=Muuta j\u00E4nnitett\u00E4
+CircuitComponentInteractiveGraphic.FlipMenuItem=K\u00E4\u00E4nn\u00E4
+discharge.inductor=Pura k\u00E4\u00E4min varaus
+CircuitComponentInteractiveGraphic.RightConnectMenuItem=N\u00E4yt\u00E4 liit\u00E4nt\u00E4 oikealla
+VirtualAmmeter.Amps=ampeeria
+ConstantDensityPropagator.SpeedLimitReached2=% normaalista\!
+BranchSource.LightBulb=Lamppu
+ConstantDensityPropagator.SpeedLimitReached1=Animaation enimm\u00E4isnopeus saavutettu\! Simulaation nopeus pienenee
 BranchSource.Capacitor=Kondensaattori
-CCK3ControlPanel.WireResistivitySlider=Johdon ominaisvastus
+circuit-construction-kit-ac.name=Piirirakennussarja (AC+DC)
+CCK3ControlPanel.WireResistivitySlider=Johtimen resistiivisyys
 BranchSource.Inductor=K\u00E4\u00E4mi
+change-frequency=Muuta taajuutta
 GrabBag.DollarBill=Seteli
-ComponentEditor.BulbResistanceName=Vastus
-ReadoutGraphic.Amps=Ampeeria
+ComponentEditor.BulbResistanceName=Resistanssi
 CCK3Module.GrabAWire=Ota johdin
-ReadoutGraphic.Ohms=Ohmia
+ReadoutGraphic.Ohms=ohmia
 BranchSource.AC=Virtal\u00E4hde
-CCKApplication.title=Virtapiirin rakennusv\u00E4lineist\u00F6
 JunctionSplitter.SplitMenuItem=Pura liitos
-OptionsMenu.TitleMnemonic=o
-CCK3ControlPanel.FilePanelBorder=Kansio
-CCK3ControlPanel.ClearButton=Tyhjenn\u00E4
-ViewMenu.TitleMnemonic=v
+OptionsMenu.TitleMnemonic=v
+CCK3ControlPanel.FilePanelBorder=Virtapiiri
 GrabBagButton.ButtonTitle=V\u00E4linekassi
-ComponentEditor.BatteryVoltageUnits=Voltit
-ReadoutGraphic.Volts=Volttia
-ComponentEditor.ResistorResistanceUnits=Ohmia
+ComponentEditor.BatteryVoltageUnits=volttia
+ComponentEditor.ACFrequency=Vaihtovirran taajuus
+ReadoutGraphic.Volts=volttia
+ComponentEditor.ResistorResistanceUnits=ohmia
 CCK3ControlPanel.HideValuesCheckBox=Piilota arvot
 GrabBag.PaperClip=Paperiliitin
-CCK3ControlPanel.LotsLabel=Joukot
-LightBulbGraphic.Bulb2Title=Hehkulamppu 2
-CCKApplication.description=Luo oma virtapiirisi, kokeile elektroneja, sytyt\u00E4 hehkulamppu.
+CCK3ControlPanel.LotsLabel=suuri
 GrabBag.Penny=Kolikko
-CCKHelp.ComponentHelp=Ved\u00E4 liikuttamalla tai klikkaa hiiren oikealla painikkeella muuntaaksesi tai poistaaksesi. 
-discharge.capacitor=Pura kondensaattori
-add.current.chart=Virtagraaffi
-Toolbox.AmmeterTitle=Virtamittari
-ComponentEditor.BatteryVoltageTitle=Patteri
+CCKHelp.ComponentHelp=Siirr\u00E4 raahaamalla tai klikkaa hiiren oikealla painikkeella muuntaaksesi tai poistaaksesi.
+discharge.capacitor=Pura kondensaattorin varaus
+add.current.chart=Virran kuvaaja
+ComponentEditor.BatteryVoltageTitle=Paristo
 CCK3ControlPanel.ToolsPanelBorder=Ty\u00F6kalut
-CCK3ControlPanel.LoopEquations=Silmukkayht\u00E4l\u00F6
+CCKHelp.right-click-help=Valinnat hiiren oikealla painikkeella
+CCK3ControlPanel.LoopEquations=Silmukkayht\u00E4l\u00F6t
 capacitance=Kapasitanssi
 OptionsMenu.ToolboxColorDialogTitle=Ty\u00F6kalupakin v\u00E4ri
 ComponentEditor.ResistorResistanceTitle=Vastus
 CCK3ControlPanel.AmmeterCheckBox=Virtamittari(t)
+ComponentEditor.Hz=Hz
 BranchSource.Wire=Johdin
 CCK3ControlPanel.GIFHelpButton=Avustuskuva
 CCK3ControlPanel.SaveButton=Tallenna
 BranchSource.Ammeter=Virtamittari
 CCK3ControlPanel.OhmsLawEquations=Ohmin lain yht\u00E4l\u00F6t
-CCK3ControlPanel.LIfelikeRadioButton=Kuvat
-ReadoutGraphic.Farads=Faradia
-CCK3ControlPanel.OpenFileDialog=Mik\u00E4 CCK tiedosto avataan?
+CCK3ControlPanel.LIfelikeRadioButton=Realistinen
+time=Aika
+ReadoutGraphic.Farads=faradia
+CCK3ControlPanel.PhETToolTip=<html>Vieraile<br>PhETin verkkosivulla.</html>
 ComponentEditor.DoneButton=Valmis
-CCK3ControlPanel.SchematicRadioButton=Piirossymbolit
+CCK3ControlPanel.SchematicRadioButton=Kytkent\u00E4kaavio
 OptionsMenu.BackgroundColorDialogTitle=Taustav\u00E4ri
-CCK3ControlPanel.AdvancedControlsDialog=Lis\u00E4ominaisuus
-CircuitComponentInteractiveGraphic.ResistanceMenuItem=S\u00E4\u00E4d\u00E4 vastusta
+CCK3ControlPanel.AdvancedControlsDialog=Lis\u00E4asetukset
+CircuitComponentInteractiveGraphic.ResistanceMenuItem=Muuta resistanssia
 CCK3ControlPanel.VoltmeterCheckBox=J\u00E4nnitemittari
-CircuitComponentInteractiveGraphic.ReverseMenuItem=Peruuta
+CircuitComponentInteractiveGraphic.ReverseMenuItem=K\u00E4\u00E4nn\u00E4 suunta
 OptionsMenu.ToolboxcolorMenuItem=Ty\u00F6kalupakin v\u00E4ri
-CCK3ControlPanel.ErrorLoadingHelpDialog=Virhe Lataus Apua
-stopwatch=Sekunttikello
+CCK3ControlPanel.ErrorLoadingHelpDialog=Virhe ladattaessa ohjetta
+stopwatch=Sekuntikello
 GrabBag.Hand=K\u00E4si
-CCK3ControlPanel.LocalHelpButton=Paikallinen apu
+CCK3ControlPanel.LocalHelpButton=Paikallinen ohje
+CCK3ControlPanel.PhETURL=http\://phet.colorado.edu
 CCK3ControlPanel.ShowValuesCheckBox=N\u00E4yt\u00E4 arvot
 CCK3ControlPanel.SmallRadioButton=Pieni
-CircuitComponentInteractiveGraphic.LeftConnectMenuItem=N\u00E4yt\u00E4 yhteydet vasemmalla
-ReadoutGraphic.ACVolts=Volttia
-InteractiveVoltmeter.VerticalLeadsCheckBox=Vertikaalinen johdin
+CircuitComponentInteractiveGraphic.LeftConnectMenuItem=N\u00E4yt\u00E4 liit\u00E4nt\u00E4 vasemmalla
+ReadoutGraphic.ACVolts=volttia
+translation.credits=Rami Nuotio
 ac.voltage.source.editor=Vaihtoj\u00E4nnitel\u00E4hteen muokkaus
-reset.dynamics=Resetoi
+CCKHelp.right-click-help-mac=Valinnat Ctrl-klikkaamalla
+reset.dynamics=Alusta liike
 VoltmeterGraphic.UnknownVolts=???
-CCK3ControlPanel.AddBatteriesButton=Lis\u00E4\u00E4 sata patteria
 CCK3ControlPanel.ShowXMLButton=N\u00E4yt\u00E4 XML
 CCK3ControlPanel.CircuitEquationsFrame=Piiriyht\u00E4l\u00F6t
-ComponentEditor.BatteryResistanceName=Sis\u00E4inen vastus
-VoltmeterGraphic.VoltAbrev=V
+ComponentEditor.BatteryResistanceName=Sis\u00E4inen resistanssi
 CCK3ControlPanel.CloseButton=Sulje
-farads=Faradia
-cck-ac.name=Virtapiirin rakennusv\u00E4lineist\u00F6 (tasa- ja vaihtoj\u00E4nnite)
-CCK3ControlPanel.LoadButton=Lataa
-CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=Vaihda sis\u00E4ist\u00E4 vastusta
-BranchSource.Battery=Patteri
+farads=faradia
+CCK3ControlPanel.LoadButton=Avaa
+CircuitComponentInteractiveGraphic.InternalResistanceMenuItem=Muuta sis\u00E4ist\u00E4 resistanssia
+current-y-axis=Virta (A)
+circuit-construction-kit-dc.name=Piirirakennussarja (vain DC)
+BranchSource.Battery=Paristo
 CCK3ControlPanel.VisualPanelBorder=Visuaalinen
-SeriesAmmeterGraphic.Amps=Ampeeria
+SeriesAmmeterGraphic.Amps=ampeeria
 SeriesAmmeterGraphic.Ammeter=Virtamittari
 OptionsMenu.BackgroundColorMenuItem=Taustav\u00E4ri
+CCK3ControlPanel.AdvancedPanelBorder=Lis\u00E4asetukset
 CCK3ControlPanel.SizePanelBorder=Koko
-CCK3ControlPanel.DeleteConfirm=Poistetaanko koko virtapiiri ja aloitetaanko alusta?
-ComponentEditor.BatteryResistanceUnits=Ohmia
-GrabBagButton.Help=Paina tavaran vieress\u00E4 olevaa painiketta.
-ReadoutGraphic.Henries=Henri\u00E4
+ComponentEditor.BatteryResistanceUnits=ohmia
+GrabBagButton.Help=Paina esineen vieress\u00E4 olevaa painiketta.
+voltage-y-axis=J\u00E4nnite (V)
+ReadoutGraphic.Henries=henry\u00E4
 CCK3ControlPanel.Disable=Piilota
 BranchSource.Switch=Kytkin
 CCK3ControlPanel.LargeRadioButton=Suuri
-CCK3ControlPanel.AlmostNoneLabel=L\u00E4hes olematon
-ComponentEditor.BatteryResistanceTitle=Patteri
-CCKHelp.JunctionHelp=Liikuta haaraumaa tai klikkaa hiiren oikealla painikkeella Valikkoa.
+circuit-construction-kit-ac-virtual-lab.name=Piirirakennussarja (AC+DC), virtuaalilaboratorio
+CCK3ControlPanel.AlmostNoneLabel=hyvin pieni
+ComponentEditor.BatteryResistanceTitle=Paristo
+WarningMessages.PossibleError=Varoitus\: Jotkin arvot voivat olla ep\u00E4tarkkoja t\u00E4ss\u00E4 piiriss\u00E4.
+CCK3ControlPanel.CCKHelpGifURL=http\://www.colorado.edu/physics/phet/projects/cck/v8/circuit-construction-kit-help.gif
+CCKHelp.JunctionHelp=Raahaa liitoksia tai avaa valikko klikkaamalla hiiren oikeaa painiketta.
+ComponentEditor.Frequency=Taajuus
 GrabBag.Eraser=Pyyhekumi
 inductance=Induktanssi
 InteractiveBranchGraphic.RemoveMenuItem=Poista
 ComponentEditor.MoreVoltsCheckBox=Lis\u00E4\u00E4 voltteja
-time.sec=Aika 
+time.sec=Aika (s)
 GrabBag.Dog=Koira
