--- a/trunk/util/simsharing/changes.txt
+++ b/trunk/util/simsharing/changes.txt
@@ -1,3 +1,4 @@
+# 00.00.47 (58174) Oct 31, 2011
 Added file i/o for message storing, see #3136
 # 00.00.46 (58158) Oct 31, 2011
 Added flavor for EventServer
