--- a/trunk/util/simsharing/changes.txt
+++ b/trunk/util/simsharing/changes.txt
@@ -1,3 +1,4 @@
+Fixed exit detection, see #3136
 # 00.00.48 (58180) Oct 31, 2011
 Removed machine cookie and session id from output, see #3136
 # 00.00.47 (58174) Oct 31, 2011
