--- a/trunk/simulations-java/simulations/molecule-shapes/changes.txt
+++ b/trunk/simulations-java/simulations/molecule-shapes/changes.txt
@@ -1,3 +1,4 @@
+10/31/11 Updated message formatting, see #3136
 # 1.01.03 (58151) Oct 31, 2011
 Redeploy after changing message output style, see #3136
 Added a separate flavor for sim event reporting, see #3136
