--- a/simulations-java/simulations/dilutions/changes.txt
+++ b/simulations-java/simulations/dilutions/changes.txt
@@ -1,3 +1,5 @@
+10/31/11 version to demo alternative layout of Dilution play area
+10/31/11 Dilution: try alternative layout of things to right of "=" sign, left-to-right order is: M2,V2,Beaker
 # 0.00.09 (58198) Oct 31, 2011
 10/31/11 version to demo alternative layout of Dilution play area
 10/31/11 Dilution: try alternative layout of things to right of "=" sign, left-to-right order is: V2,Beaker,M2
