--- a/simulations-java/common/phetcommon/changes.txt
+++ b/simulations-java/common/phetcommon/changes.txt
@@ -1,3 +1,5 @@
+11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
+11/1/2011 Changed PropertyCheckBox to use actionPerformed instead of ChangeListener to suppress multiple event notifications, see #3136
 10/31/11 Changed events from "message" to "object" + "action", see #3136
 10/30/11 Only try to load machine cookie if sim-sharing is enabled, see #3136
 10/30/11 Replaced usages of SimSharingEvents.addPropertyListener with SimSharingProperty and removed SimSharingEvents.addPropertyListener, see #3136
