--- a/trunk/simulations-java/simulations/molecule-polarity/changes.txt
+++ b/trunk/simulations-java/simulations/molecule-polarity/changes.txt
@@ -1,3 +1,5 @@
+11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
+11/1/2011 Changed PropertyCheckBox to use actionPerformed instead of ChangeListener to suppress multiple event notifications, see #3136
 10/31/2011 Use param() instead of new Parameter(), see #3136
 # 1.01.05 (58185) Oct 31, 2011
 # 1.01.04 (58184) Oct 31, 2011
