--- a/trunk/simulations-java/common/piccolo-phet/changes.txt
+++ b/trunk/simulations-java/common/piccolo-phet/changes.txt
@@ -1,3 +1,4 @@
+11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
 10/16/2011 Extracted SensorNode superclass from VelocitySensorNode for reuse in plate-tectonics
 10/13/2011 Changed color in thermometer node to be the color-blind-friendly version of red.
 10/10/2011 Renamed "allowed" parameter to "enabled" in faucet classes
