--- a/trunk/simulations-java/simulations/capacitor-lab/changes.txt
+++ b/trunk/simulations-java/simulations/capacitor-lab/changes.txt
@@ -2,7 +2,7 @@
 # 2.00.02 (57052) Sep 29, 2011
 9/29/11 #3012, make dielectric excess charges use same z-margin as plate charges so that they end up with the same grid dimensions
 # 2.00.01 (57035) Sep 29, 2011
-> revised representation of dielectric excess charge
+> new representation for dielectric excess charge
 9/29/11 #3012, dielectric excess charge: use a grid for bottom face, use old approach for top face
 9/29/11 #3012, use one representation for excess charge, make dielectric transparent when excess charge is selected
 9/29/11 #3012, add transparency to plate charges that are under the dielectric
