--- a/simulations-java/simulations/balancing-chemical-equations/changes.txt
+++ b/simulations-java/simulations/balancing-chemical-equations/changes.txt
@@ -1,3 +1,4 @@
+# 1.00.04 (58219) Nov 1, 2011
 # 1.00.03 (58183) Oct 31, 2011
 10/31/11 Updated message formatting, see #3136
 # 1.00.02 (58148) Oct 30, 2011
