--- a/simulations-java/simulations/molecule-polarity/changes.txt
+++ b/simulations-java/simulations/molecule-polarity/changes.txt
@@ -1,3 +1,4 @@
+# 1.01.06 (58220) Nov 1, 2011
 11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
 11/1/2011 Changed PropertyCheckBox to use actionPerformed instead of ChangeListener to suppress multiple event notifications, see #3136
 10/31/2011 Use param() instead of new Parameter(), see #3136
