--- a/trunk/simulations-java/simulations/molecule-shapes/changes.txt
+++ b/trunk/simulations-java/simulations/molecule-shapes/changes.txt
@@ -1,3 +1,4 @@
+# 1.01.05 (58221) Nov 1, 2011
 # 1.01.04 (58186) Oct 31, 2011
 10/31/11 Updated message formatting, see #3136
 # 1.01.03 (58151) Oct 31, 2011
