--- a/util/sim-event-processor/changes.txt
+++ b/util/sim-event-processor/changes.txt
@@ -1,3 +1,4 @@
+Improved text output, see #3136
 Added plotting for events vs time, see #3136
 Improved post-processing, see #3136
 Added processor module, see #3136
