--- a/simulations-java/simulations/dilutions/TODO.txt
+++ b/simulations-java/simulations/dilutions/TODO.txt
@@ -4,8 +4,7 @@ DESIGN
 - Tab 3 (Making Dilutions)
 
 HIGH
-- Dilution: M1 control, no need to gray out part of track as in mockup
-- Dilution: implementation of M1*V1=M2*V2
+- Dilution: gradient in M1 control
 - Molarity: more convincing gradients for Kool-Aid and KMnO4, as in design doc beaker photos
 
 MEDIUM
