--- a/util/sim-event-processor/changes.txt
+++ b/util/sim-event-processor/changes.txt
@@ -1,3 +1,4 @@
+Added multi-plots for post-processing, see #3136
 Added events to search for in Molecule Polarity Tab 1, see #3136
 Improved text output, see #3136
 Added plotting for events vs time, see #3136
