--- a/trunk/simulations-java/simulations/dilutions/changes.txt
+++ b/trunk/simulations-java/simulations/dilutions/changes.txt
@@ -1,3 +1,4 @@
+11/01/11 repackage
 11/01/11 Dilution: clean up canvas constructor, address open issues
 11/01/11 Molarity: clean up canvas constructor, address open issues
 11/01/11 Dilution: if a beaker's concentration is zero, label it as H2O
